<resources>
    <string name="app_name">Moviku</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poster_movie">Poster Movie</string>
    <string name="try_again">Try Again</string>
    <string name="backdrop_movie">Backdrop Movie</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release Date</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="official_trailer">Official Trailer</string>
    <string name="review">Reviews</string>
    <string name="reviewer_avatar">Reviewer Avatar</string>
    <string name="read_all_review">Read All Review</string>
    <string name="no_data_available">No data available</string>
    <string name="sort_by">Sort by</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="random">Random</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Movie</string>
</resources>