<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/menu_sort"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_filter"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />
</menu>