<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.moviedetail.MovieDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMovieDetail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/light_red"
        app:title="@string/detail_movie"
        app:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMovieDetail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp32">

            <ImageView
                android:id="@+id/ivBackdrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp350"
                android:contentDescription="@string/backdrop_movie"
                android:scaleType="centerCrop"
                android:transitionName="poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                tools:src="@drawable/ic_error" />

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="@dimen/dp120"
                android:layout_height="@dimen/dp170"
                android:layout_marginTop="@dimen/dp250"
                android:layout_marginStart="@dimen/dp16"
                android:contentDescription="@string/poster_movie"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp8"
                android:textColor="@color/white"
                android:textSize="@dimen/sp24"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ivBackdrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivPoster"
                app:layout_constraintVertical_bias="1"
                tools:text="Movie Title Movie Title Movie" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8"
                android:layout_marginTop="@dimen/dp8"
                android:isIndicator="false"
                android:progressTint="@color/dark_red"
                android:progressBackgroundTint="@color/black"
                android:numStars="5"
                android:rating="4"
                android:stepSize="0.5"
                android:scaleX="2"
                android:scaleY="2"
                android:translationX="@dimen/dp40"
                app:layout_constraintStart_toEndOf="@id/ivPoster"
                app:layout_constraintTop_toBottomOf="@id/ivBackdrop"/>

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dark_red"
                android:paddingHorizontal="@dimen/dp16"
                android:paddingVertical="@dimen/dp8"
                android:textColor="@color/white"
                android:textSize="@dimen/sp18"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivBackdrop"
                tools:text="7.5" />

            <TextView
                android:id="@+id/tvOverviewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:text="@string/overview"
                android:textSize="@dimen/sp16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/ivPoster"
                app:layout_constraintTop_toBottomOf="@id/ivPoster" />

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp16"
                android:textSize="@dimen/sp16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvOverviewTitle"
                app:layout_constraintTop_toBottomOf="@id/tvOverviewTitle"
                app:layout_constraintHorizontal_bias="0"
                tools:text="Overview Text Overview Text Overview Text Overview Text" />

            <TextView
                android:id="@+id/tvReleaseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:text="@string/release_date"
                android:textSize="@dimen/sp16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/ivPoster"
                app:layout_constraintTop_toBottomOf="@id/tvOverview" />

            <TextView
                android:id="@+id/tvReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp16"
                android:textSize="@dimen/sp16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvOverviewTitle"
                app:layout_constraintTop_toBottomOf="@id/tvReleaseTitle"
                app:layout_constraintHorizontal_bias="0"
                tools:text="Overview Text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>